Changed java version to 11, removed unused modules, created distributionmanagement to point to github repo, removed version 17 dependent code